test: add unit tests for FdoQuery and RetrieveFdo